--- a/src/index.css
+++ b/src/index.css
@@ -423,7 +423,7 @@ Nav Links
 
     align-self: stretch;
   }
-  .nav-center {
+  .nav-links-center {
     align-self: stretch;
     display: grid;
     grid-template-columns: auto 1fr;
