css and elements tweaks

--- a/src/index.css
+++ b/src/index.css
@@ -66,8 +66,8 @@ html {
 
 body {
   background: var(--backgroundColor);
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto,
-    Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   font-weight: 400;
   line-height: 1;
   color: var(--textColor);
@@ -296,7 +296,7 @@ nav {
   cursor: pointer;
 }
 .toggle-btn:hover {
-  transform: scale(1.05);
+  transform: scale(1.15);
 }
 /* 
 ============= 
@@ -318,10 +318,10 @@ Hero
   font-size: clamp(3rem, 5vw, 5rem);
   margin-bottom: 1rem;
   font-weight: 700;
-  line-height: 1.25;
+  line-height: 1.5;
 }
 .hero-center p {
-  line-height: 1.5;
+  line-height: 2;
 }
 
 @media screen and (min-width: 992px) {
@@ -354,13 +354,14 @@ Sidebar
   opacity: 0;
   visibility: hidden;
 }
+
+/* toggle class */
 .show-sidebar {
   opacity: 1;
   visibility: visible;
   transition-property: opacity;
   transition-duration: 1s;
 }
-/* toggle class */
 
 .sidebar-container {
   padding: 4rem 2rem;
@@ -373,22 +374,31 @@ Sidebar
   border-color: transparent;
   color: var(--primary-500);
   position: absolute;
-  top: 1rem;
-  right: 1rem;
+  top: 1.5rem;
+  right: 1.5rem;
   cursor: pointer;
 }
+
 .sidebar article {
-  margin-bottom: 2rem;
+  margin-bottom: 3.5rem;
+}
+
+.sidebar article:first-child {
+  margin-top: 1.5rem;
 }
 .sidebar h4 {
   margin-bottom: 1rem;
   color: var(--primary-700);
 }
 
+.sidebar-links {
+  font-size: x-large;
+  line-height: 2rem;
+}
 .sidebar-sublinks {
   display: grid;
   grid-template-columns: 1fr 1fr;
-  row-gap: 0.5rem;
+  row-gap: 1.5rem;
 }
 
 .sidebar-sublinks a {
@@ -397,11 +407,18 @@ Sidebar
   text-transform: capitalize;
   display: flex;
   align-items: center;
-  gap: 1rem;
+  gap: 1.5rem;
 }
+
 .sidebar-sublinks svg {
   color: var(--grey-500);
 }
+
+.sidebar-sublinks a:hover {
+  transition: var(--transition);
+  transform: scale(1.05);
+}
+
 @media screen and (min-width: 992px) {
   .sidebar {
     display: none;
@@ -420,16 +437,16 @@ Nav Links
   .nav-links {
     display: flex;
     justify-content: center;
-
     align-self: stretch;
+    gap: 2rem;
   }
-  .nav-links-center {
+  .nav-center {
     align-self: stretch;
     display: grid;
     grid-template-columns: auto 1fr;
   }
   .nav-link {
-    padding: 0 1rem;
+    padding: 0 2rem;
     color: var(--white);
     background: transparent;
     border-color: transparent;
@@ -445,6 +462,9 @@ Nav Links
 Submenu
 =============== 
 */
+
+.submenu-container {
+}
 .submenu {
   display: none;
 }
@@ -452,7 +472,7 @@ Submenu
   .submenu {
     display: block;
     position: fixed;
-    top: 7rem;
+    top: 5rem;
     left: 50%;
     width: var(--fluid-width);
     max-width: var(--max-width);
